--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/router": "^19.2.14",
     "@angular/service-worker": "^19.2.14",
     "@ngrx/signals": "^19.2.1",
+    "apexcharts": "^4.7.0",
+    "ng-apexcharts": "^1.15.0",
     "ol": "^10.5.0",
     "rxjs": "~7.8.0",
     "swiper": "^11.2.8",
